--- a/1.人工智慧操作環境建置.md
+++ b/1.人工智慧操作環境建置.md
@@ -4,9 +4,26 @@
 
 ## 安裝 Ubuntu 作業系統  
 
-### 安裝 Gedit 工具
+* 安裝 Gedit 工具
 `
 sudo apt install gedit
 `
+
+* 安裝 Git 工具
+`
+sudo apt install git
+`
+
+* 安裝 pip 工具
+`
+sudo apt install python-pip
+`
+
+* 安裝 jupyterlab
+`
+pip install jupyter lab
+`
+
+
 
 ## 設定遠端操作環境  
