Update 4.人工智慧開發套件 - Pytorch入門.md

--- a/4.人工智慧開發套件 - Pytorch入門.md
+++ b/4.人工智慧開發套件 - Pytorch入門.md
@@ -1,7 +1,17 @@
 ### 2019/10/21
 
 1. 張量與變量意義
-  * 張量(Tensor)
+  * 張量(Tensor)    
+    張量可以想象成一個n維的陣列或列表；張量是所有深度學習框架中最核心的元件，因為後續的所有運算和優化演算法都是基於張量進行的，而其中張量可以在圖中的節點之間流通。    
+    以一張RGB三原色所組成的照片為例，我們可以拆成三個維度分別是圖片的  :
+    `三維陣列 = (高度，寬度，色彩資料)`    
+    
+    註:
+    1. 高度和寬度表示圖片中每一個像素點的位置。
+    2. 色彩資料也就是我們將圖片的每一個像素點拆為RGB(紅色、綠色、藍色)三個顏色，並且將三種顏色的比例標示出來。
+
+
+
   * 變量(Variable)
   
 2. 自動微分程式庫
